--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ footer {
     height: 35px;
   }
 }
-  .logo-with-name {
-    height: 45px;
-    object-fit: contain;
+.inline-logo {
+  height: 40px;
+  vertical-align: middle;
+  margin-left: 10px;
 }
